--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -7,5 +7,15 @@
 </head>
 <body>
     <h2>Welcome to the adminPage!</h2>
+    <br/>
+    <h3>Links to the admin functions</h3>
+    <br/>
+    <a th:href="@{/productmanagement}">Products management</a>
+    <br/>
+    <a th:href="@{/userlist}">User list</a>
+    <br/>
+    <a th:href="@{/searchuser}">Search users</a>
+    <br/>
+    <a th:href="@{/purchaselist}">List of all purchases</a>
 </body>
 </html>
