--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -16,11 +16,11 @@
             <th>Buy</th>
         </tr>
         <tr th:each="product:${listOfProducts}">
-            <td th:text="${product.productId}"></td>
             <td th:text="${product.productName}"></td>
             <td th:text="${product.productCategory}"></td>
             <td th:text="${product.productPrice}"></td>
-            <td><a th:href="@{/orderProduct/{productId} (productId=${product.productId}) }">Add to cart</a></td>
+            <td th:if="${product.quantity} != 0"><a th:href="@{/orderProduct/{productId} (productId=${product.productId}) }">Add to cart</a></td>
+            <td th:if="${product.quantity} == 0"><a>Sold out</a></td>
         </tr>
     </table>
     <br>
